# messenger

./: CMakeLists.txt  Doxyfile  Doxyfile.in  makefile
src/: set.h  svbase64.h
tests/: CMakeLists.txt  tests.cpp
